deploy/kust/manifests/api-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: lani-offline
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api-server
        # TODO:
        image: ghcr.io/std4453/api-server:dev-admin
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
        resources:
          limits:
            memory: "100Mi"
            cpu: "500m"
          requests:
            memory: "10Mi"
            cpu: "10m"
      imagePullSecrets:
      - name: ghcr-io-regcred
---
kind: Service
apiVersion: v1
metadata:
  name: api-server
  namespace: lani-offline
spec:
  selector:
    app: api-server
  ports:
  - name: http
    port: 8080
    targetPort: 3000
