deploy/kust/manifests/data-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-server
  namespace: lani
  labels:
    app: data-server
    version: offline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-server
      version: offline
  template:
    metadata:
      labels:
        app: data-server
        version: offline
    spec:
      containers:
      - name: data-server
        image: ghcr.io/std4453/data-server:dev-admin
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            memory: "100Mi"
            cpu: "500m"
          requests:
            memory: "10Mi"
            cpu: "10m"
      imagePullSecrets:
      - name: ghcr-io-regcred
---
kind: Service
apiVersion: v1
metadata:
  name: data-server-offline
  namespace: lani
spec:
  selector:
    app: data-server
    version: offline
  ports:
  - name: http
    port: 80
    targetPort: 8080
