deploy/kust/manifests/rss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss
  namespace: lani-offline
  labels:
    app: rss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss
  template:
    metadata:
      labels:
        app: rss
    spec:
      containers:
      - name: rss
        # TODO:
        image: ghcr.io/std4453/rss:dev-admin
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            memory: "100Mi"
            cpu: "500m"
          requests:
            memory: "10Mi"
            cpu: "10m"
      imagePullSecrets:
      - name: ghcr-io-regcred
---
kind: Service
apiVersion: v1
metadata:
  name: rss
  namespace: lani-offline
spec:
  selector:
    app: rss
  ports:
  - name: http
    port: 8080
    targetPort: 8080
