deploy/kust/manifests/sonarr-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-sync
  namespace: lani-offline
  labels:
    app: sonarr-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr-sync
  template:
    metadata:
      labels:
        app: sonarr-sync
    spec:
      containers:
      - name: sonarr-sync
        # TODO:
        image: ghcr.io/std4453/sonarr-sync:dev-admin
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            memory: "100Mi"
            cpu: "500m"
          requests:
            memory: "10Mi"
            cpu: "10m"
      imagePullSecrets:
      - name: ghcr-io-regcred
---
kind: Service
apiVersion: v1
metadata:
  name: sonarr-sync
  namespace: lani-offline
spec:
  selector:
    app: sonarr-sync
  ports:
  - name: http
    port: 8080
    targetPort: 8080
