deploy/kust/manifests/internal-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: lani-internal-vs
  namespace: lani
  labels:
    app: lani
spec:
  gateways:
  - istio-system/internal-gateway
  hosts:
  - lani.std4453.net
  http:

  - match:
    - uri: 
        prefix: /bilibili-bangumi-cc/
    rewrite:
      uri: /
    route:
    - destination:
        host: bilibili-bangumi-cc
        port:
          number: 80

  - match:
    - uri: 
        prefix: /mikan-fetch/
    rewrite:
      uri: /
    route:
    - destination:
        host: mikan-fetch
        port:
          number: 80
