deploy/kust/manifests/istio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: lani-internal-vs
  namespace: lani
  labels:
    app: lani
spec:
  gateways:
  - istio-system/internal-gateway
  hosts:
  - lani.i.std4453.com
  http:

  - match:
    - uri: 
        prefix: /api/bilibili-bangumi-cc/
    rewrite:
      uri: /
    route:
    - destination:
        host: bilibili-bangumi-cc
        port:
          number: 80

  - match:
    - uri: 
        prefix: /api/mikan-fetch/
    rewrite:
      uri: /
    route:
    - destination:
        host: mikan-fetch
        port:
          number: 80

  - match:
    - uri: 
        prefix: /api/data-server/
    rewrite:
      uri: /
    route:
    - destination:
        host: data-server-offline
        port:
          number: 80
